# numgen

./: Cargo.toml  README.md
numgen_cli/: Cargo.toml
numgen_cli/src/: command_handler.rs  main.rs
numgen_cli/src/cli/: commands_type.rs  common_args.rs  factorial_args.rs  fibonacci_args.rs  log_level.rs  mod.rs  nnachi_args.rs  prime_args.rs  tribonacci_args.rs
numgen_cli/src/common/: log_util.rs
numgen_lib/: Cargo.toml
numgen_lib/src/: lib.rs
numgen_lib/src/handlers/: factorial.rs  fibonacci.rs  mod.rs  nnachi.rs  prime.rs  tribonacci.rs  utils.rs
src/: command_handler.rs  main.rs
src/cli/: cli.rs  cli_parser.rs  commands_type.rs  fibonacci_args.rs  mod.rs  output_level.rs
src/common/: log_util.rs
src/executors/: fibonacci.rs
src/handlers/: fibonacci.rs
