[package]
name = "numgen"
version = "0.1.0"
edition = "2021"
authors = ["James Poulose"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive", "cargo"] }
log = { version = "0.4.20", features = ["std"] }
log4rs = "1.3.0"
